# nachla-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEV_PLAN.md  Dockerfile  MASTER_PROMPT.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/agents/: agent-builder.md  calc-builder.md  doc-builder.md  integration-builder.md  ui-builder.md  validator-code.md  validator-domain.md  validator-ux.md
.github/workflows/: ci.yml
docs/: agent_workflow_flow.md  expert_review_consolidated.md  technical_blueprint.md
src/agent/: audit_log.py  health.py  main_agent.py  system_prompt.py  workflow.py
src/api/: jobs.py  main.py  middleware.py  routes.py
src/config/: database.py  rates_config.json  security.py  settings.py
src/documents/: __init__.py  excel_reader.py  ocr.py  pdf_parser.py  word_generator.py
src/integrations/: __init__.py  gdrive_client.py  govmap_scraper.py  monday_client.py  onedrive_client.py
src/models/: __init__.py  building.py  nachla.py  report.py  taba.py
src/tools/: __init__.py  calc_dmei_heter.py  calc_dmei_shimush.py  calc_hetel_hashbacha.py  calc_hivun.py  calc_pitzul.py  calc_sqm_equivalent.py  lookup_tables.py  priority_areas.py
src/ui/: app.py  auth.py  components.py
tests/: test_agent.py  test_audit_log.py  test_calculations.py  test_documents.py  test_edge_cases.py  test_environment.py  test_golden.py  test_integrations.py  test_production.py  test_security.py
tests/golden/: extract_golden_data.py  golden_cases.json
tests/golden/בדיקות התכנות/אבידוב איתן - ניר בנים/: תחשיבים אבידוב.xlsx
(+25 files in other folders)
